--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
+
 <p>这是我的个人网站。 </p>
 <p>很高兴你来到这里</p>
+<p>个人简介：一名测试开发工程师，专注测试工具开发和产品质效提升。</p>
+<p>location：墙内。</p>
 
-<ul>
-  <li> <a href="./"></a>我的主页</li>
-  <li> <a href="./"></a> </li>
-</ul>
+
